<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/form_padding"
        android:layout_marginStart="@dimen/form_padding">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/il_student_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:weightSum="1">

            <EditText
                android:id="@+id/et_student_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_student_name"
                android:maxLength="14"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/il_parent_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:weightSum="1">

            <EditText
                android:id="@+id/et_parent_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_student_parent"
                android:maxLength="14"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:textColor="@android:color/darker_gray"
                android:textColorHint="@android:color/darker_gray"
                android:shadowColor="@android:color/black"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/il_parent_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:weightSum="1">

            <EditText
                android:id="@+id/et_parent_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_student_parent_number"
                android:maxLength="14"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:textColor="@android:color/darker_gray"
                android:textColorHint="@android:color/darker_gray"
                android:shadowColor="@android:color/black"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/il_zipcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:weightSum="1">

            <EditText
                android:id="@+id/et_zipcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_zipcode"
                android:maxLength="14"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:textColor="@android:color/darker_gray"
                android:textColorHint="@android:color/darker_gray"
                android:shadowColor="@android:color/black"
                android:drawableEnd="@android:drawable/ic_search_category_default"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/il_street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:weightSum="1">

            <EditText
                android:id="@+id/et_street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_street"
                android:imeOptions="actionDone"
                android:maxLength="100"
                android:inputType="text"
                android:textColor="@android:color/darker_gray"
                android:textColorHint="@android:color/darker_gray"
                android:shadowColor="@android:color/black" />

        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/il_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:layout_marginTop="10dp"
                android:weightSum="1">

                <EditText
                    android:id="@+id/et_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_number"
                    android:imeOptions="actionDone"
                    android:maxLength="15"
                    android:inputType="numberSigned"
                    android:textColor="@android:color/darker_gray"
                    android:textColorHint="@android:color/darker_gray"
                    android:shadowColor="@android:color/black" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/il_complement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/et_complement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:maxLength="100"
                    android:inputType="text"
                    android:hint="@string/lbl_complement"
                    android:textColor="@android:color/darker_gray"
                    android:textColorHint="@android:color/darker_gray" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/il_neigborhood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:weightSum="1">

            <EditText
                android:id="@+id/et_neigborhood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_neigborhood"
                android:imeOptions="actionDone"
                android:maxLength="100"
                android:inputType="text"
                android:textColor="@android:color/darker_gray"
                android:textColorHint="@android:color/darker_gray" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</ScrollView>