<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/form_padding"
        android:layout_marginStart="@dimen/form_padding"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/form_padding">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/il_route_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:weightSum="1">

                    <EditText
                        android:id="@+id/et_route_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lbl_routes_name"
                        android:maxLength="14"
                        android:inputType="text"
                        android:imeOptions="actionDone"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/darker_gray" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/lbl_routes_period"
                    android:textSize="@dimen/et_size"
                    android:textColor="@android:color/darker_gray"/>

                <Spinner
                    android:id="@+id/sp_route_period"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/array_routes_name_content"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/il_out_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:weightSum="1">

                    <EditText
                        android:id="@+id/et_out_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lbl_out_time"
                        android:maxLength="14"
                        android:inputType="number"
                        android:imeOptions="actionDone"
                        android:textColor="@android:color/darker_gray"
                        android:textColorHint="@android:color/darker_gray"
                        android:shadowColor="@android:color/black"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cv_students"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_padding"
                card_view:cardElevation="10dp"
                card_view:cardPreventCornerOverlap="true"
                card_view:cardUseCompatPadding="true"
                card_view:cardCornerRadius="4dp"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/form_padding"
                        android:text="@string/lbl_route_student"
                        android:textSize="@dimen/et_size"
                        android:textColor="@android:color/darker_gray"
                        android:textColorHint="@android:color/darker_gray" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_student_content"
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:tools="http://schemas.android.com/tools"
                        style="@style/TwoWayView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawSelectorOnTop="false"
                        tools:context=".ui.activity.RegisterRouteActivity"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_menu_save"
        android:tint="@color/colorPrimary"
        app:theme="@style/FabThemeColor"/>
</android.support.design.widget.CoordinatorLayout>